welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:22: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()){return true}
      ^SnakeBuggle:25: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()){return true}
      ^